<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MyKey</string>
    
    <string name="twice_back">再按一次返回键退出</string>
    
    <string name="edit_hint">请输入密码</string>
    <string name="login">登陆</string>
    <string name="exit">退出</string>
    <string name="edit">编辑</string>
    <string name="modify">修改密码</string>
    
    <string name="setting">"设置"</string>
    
    <string name="set_password">设置密码登陆</string>
    <string name="login_model_pw">密码登陆</string>
    <string name="login_model_pattern">图案登陆</string>
    
    <string name="pa_set_pw">设置密码</string>
    <string name="pa_reset_pw">重置密码</string>
    <string name="pa_check_pw">校验密码</string>
    
    <string name="pw_msg_01">密码为空,请设定登录密码</string>
    <string name="pw_msg_02">亲，密码不能为空哦!</string>
    <string name="pw_msg_03">设置成功</string>
    <string name="pw_msg_04">亲，两次输入的密码不一致啊!</string>
    <string name="pw_modify_tip">请修改密码</string>
    <string name="pw_modify_ok">修改成功</string>
    <string name="pw_old_error">旧密码输入错误</string>
    <string name="pw_msg_08">旧密码输入错误</string>
    <string name="new_password">"新密码"</string>
    <string name="confirm_password">"确认密码"</string>
    <string name="new_password_tip">"新密码不能为空"</string>
    <string name="confirm_password_tip">"确认密码不能为空"</string>
    <string name="error_password">"密码输入错误"</string>
    
    <string name="pattern_set_error">图案错误</string>
    <string name="pattern_set_success">图案密码设置成功</string>
    <string name="pattern_set_tip">请设置图案密码</string>
    <string name="pattern_title">请输入正确的图案</string>
    
   	<!-- Accessibility description sent when user starts drawing a lock pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <!-- Accessibility description sent when the pattern times out and is cleared. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <!-- Accessibility description sent when user adds a cell to the pattern. [CHAR LIMIT=NONE]  -->
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <!-- Accessibility description sent when user completes drawing a pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    
    <!-- menu -->
    <string name="menu_title">"操作"</string>
    <string name="menu_add">"新增"</string>
    <string name="menu_edit">"编辑"</string>
    <string name="menu_save">"保存"</string>
    <string name="menu_delete">"删除"</string>
    <string name="menu_delete_multi">"删除多条记录"</string>
    <string name="menu_cancel">"取消"</string>
    <string name="menu_open">"打开"</string>
    <string name="menu_backup">"备份"</string>
    <string name="menu_edit_title">"编辑标题"</string>
    <string name="menu_search">搜索</string>
    
    <string name="share">分享</string>
    <string name="share_tip">您的密码管家MyKey,很好,很强大!</string>
    
    <string name="delete_msg">"确定删除 “<xliff:g id="delete">%1$s</xliff:g>” 这一条记录？"</string>
    <string name="delete_msg_2">"确定删除本条记录？"</string>
    <string name="delete_msg_multi">"确定删除这<xliff:g id="delete_multi">%1$s</xliff:g>条记录？"</string>
    <string name="multi_delete"></string>
    <string name="selected_msg">"选择记录(<xliff:g id="selected">%1$s</xliff:g>)"</string>
    
   <string name="no_record">"记录为空"</string>
   <string name="search_result_empty">"没有符合搜索条件的记录"</string>
   
   <!-- custom actionBar popmenu -->
   <string name="actionbar_delete">删除</string>
   <!-- custom actionBar popmenu -->
   
   
   <string name="retry">"重试"</string>
   <string name="next">"继续"</string>
   <string name="confirm">"确认"</string>
   <string name="reset">"重新设定"</string>
   
   <string name="lock_msg_tip">"绘制图案解锁"</string>
   <string name="lock_msg_init">"第一次登陆，请绘制图案"</string>
   <string name="lock_draw_tip">"绘制解锁图案"</string>
   <string name="lock_draw_tip2">"完成后松开手指"</string>
   <string name="lock_msg_retry">"请重试"</string>
   <string name="lock_msg_new">"您的新解锁图案"</string>
   
   <string name="reset_confirm">"确认重置密码？"</string>
   <string name="reset_ok">"密码已重置，请重新设定"</string>
   
   <string name="mode_select">"选择登陆方式"</string>
   <string name="login_mode">"登陆方式"</string>
   
   <string name="seleteall">"全选"</string>
   <string name="cancelall">"取消全选"</string>
   
   <string name="title_cannot_null">"标题不能为空"</string>
   <string name="back_msg">"是否放弃当前编辑？"</string>
   
   <string name="mail_backup">"备份邮箱"</string>
   <string name="mail_not_setting">"可以设置一个备份邮箱"</string>
   <string name="mail_setting">"备份邮箱设置"</string>
   <string name="mail_modify">"备份邮箱修改"</string>
   <string name="tip_msg">"请至少选中一个！"</string>
   
   <string name="key_backup">"数据备份"</string>
   <string name="backup_tip">"本地备份路径:/sdcard/MyKey"</string>
   <string name="backup_location">"备份路径："</string>
   <string name="key_restore">"数据恢复"</string>
   <string name="key_restore_title">"选择要恢复的备份"</string>
   <string name="backup_file_no_exist">"没有找到备份数据"</string>
   <string name="restore_success">数据恢复成功!</string>
   <string name="restore_fail">数据恢复失败!</string>
   <string name="restore_tip">"恢复操作将覆盖现有数据，请谨慎操作"</string>
   <string name="crash_toast">"错误信息已发送，谢谢你的协助！"</string>
   
   <string name="group_manager">群组管理</string>
   <string name="group_edit">编辑群组</string>
   <string name="group_delete">删除群组</string>
   <string name="group_all">全部</string>
   <string name="group_default">默认</string>
   <string name="group_network">网络</string>
   <string name="group_client">客户端</string>
   <string name="group">群组</string>
   <string name="group_name">群组名称</string>
   <string name="group_new">新建群组</string>
   <string name="group_delete_confirm_tip">"确认删除 <xliff:g id="delete_multi">%1$s</xliff:g>？"</string>
   <string name="group_exist"><xliff:g id="delete_multi">%1$s</xliff:g>已存在</string>
   
   <string name="cancel">取消</string>
   <string name="done">完成</string>
   
   <string name="title">标题</string>
   <string name="title_input">输入标题</string>
   <string name="username">用户名</string>
   <string name="username_input">输入用户名</string>
   <string name="password">密码</string>
   <string name="password_input">输入密码</string>
   <string name="password_power">密码强度</string>
   <string name="wake">弱</string>
   <string name="middle">中</string>
   <string name="power">强</string>
   <string name="website">WebSite</string>
   <string name="note">Note</string>
   <string name="show_pw">Show Password</string>
   <string name="username_null_tip">用户名不能为空</string>
   
   <string name="year_sfd">"yyyy年M月d日 HH:mm"</string>
    <string name="month_sfd">"M月d日 HH:mm"</string>
    <string name="hours_sfd">"HH:mm"</string>
    <string name="yestoday">"昨天  <xliff:g id="time">%1$s</xliff:g>"</string>
    
   
   <string name="about">"关于"</string>
	<string name="about_introduce_title">"产品简介"</string>
	<string name="about_introduce">"    如果你因为需要记各种网站的用户名和密码而煞费苦心
	    \n    那么MyKey绝对值得拥有
	    \n    感谢您的使用！
	    \n    如果你喜欢，何不分享给小伙伴使用一下呢
	    \n    点击右上角分享
	    "</string>
	<string name="about_author">"©2013 Yuri_Xia"</string>
	<string name="about_connection">"联系我"</string>
	<string name="about_statement">"    如您在使用过程中有任何疑问或软件错误，您可以通过以下方式联系我，期待与您交流。"</string>
	<string name="about_email">"邮箱：xlog2013@163.com"</string>
	<string name="about_version">"版本"</string>
	<string name="about_version_code">"v1.0"</string>
</resources>
